[tool.poetry]
name = "SCRIPBOZO"
version = "0.1.0"
description = "A Twitch chatbot based on GPT2 trained on MOONMOON's chat logs"
authors = ["Kogasa <kogasapls@gmail.com>"]
readme = "README.md"
packages = [{ include = "scripbozo", from = "src" }]

[tool.poetry.scripts]
run = "scripbozo.__main__:main"

[tool.poetry.dependencies]
python = "^3.12"
torch = { version = "2.2.2+rocm5.7", source = "torch_rocm" }
pytorch-triton-rocm = { version = "2.2.0", source = "torch_rocm" }
twitchio = "^2.8"
transformers = "^4.37"
datasets = "^2.17"
aiolimiter = "^1.0"
ujson = "^5.9"
aioschedule = "^0.5"
iso8601 = "^2.1"
requests = "^2.28"
python-dotenv = "^1.0"
reqwest = "^0.0.0"

[tool.poetry.group.dev.dependencies]
pylint = "*"
black = "*"
reorder-python-imports = "*"
pre-commit = "^3.7.0"

[[tool.poetry.source]]
name = "torch_rocm"
url = "https://download.pytorch.org/whl/rocm5.7"
priority = "explicit"

[[tool.poetry.source]]
name = "torch_cuda"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[[tool.poetry.source]]
name = "torch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.extras]
dev = ["pylint", "black", "reorder-python-imports"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
