[project]
name = "SCRIPBOZO"
version = "0.1.0"
description = "A Twitch chatbot based on GPT2 trained on MOONMOON's chat logs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiolimiter>=1.1.0",
    "datasets>=2.20.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "transformers>=4.43.3",
    "twitchio>=2.10.0",
    "ujson>=5.10.0",
    "torch==2.6.0+rocm6.2.4 ; sys_platform == 'linux'",
    "pytorch-triton-rocm==3.2.0 ; sys_platform == 'linux'",
]

[project.scripts]
SCRIPBOZO ="scripbozo.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.2.4"
explicit = true


[tool.uv.sources]
torch = [
  { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]
pytorch-triton-rocm = [
  { index = "pytorch-rocm", marker = "sys_platform == 'linux'" }
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.8.4",
    "setuptools>=75.6.0",
]
